docs/specs/fixtures/forge-v1/invalid/crlf-line-endings.forge
#!forge/v1
forge_version: 1
